--- a/index.html
+++ b/index.html
@@ -1,170 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DHANESH RAJ</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <title>Dhanesh Raj's Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-    <!-- Header Section -->
-    <header>
-        <div class="container">
-            <h1 class="logo">My Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#publications">Publications</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#teaching">Teaching</a></li>
-                    <li><a href="#activities">Activities</a></li>
-                    <li><a href="#group-dissemination">Group Dissemination</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#main">Home</a></li>
+            <li><a href="#timeline">Timeline</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <!-- Add more navigation links here -->
+        </ul>
+    </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="parallax-section">
-        <div class="parallax-bg" style="background-image: url('background.jpg');"></div>
-        <div class="container">
-            <div class="home-content">
-                <div class="home-info">
-                    <h2>John Doe</h2>
-                    <p>Department of Computer Science</p>
-                    <p>Phone: 123-456-7890</p>
-                    <p>Email: <a href="mailto:imdhaneshraj@gmail.com">imdhaneshraj@gmail.com</a></p>
-                    <p>Email: <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a></p>
-                    <p>Email: <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
-                    <div class="social-media">
-                        <a href="https://in.linkedin.com/in/dhaneshraj" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://scholar.google.co.in/citations?user=CSB7DU0AAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                        <a href="https://www.researchgate.net/profile/Dhanesh-Raj" target="_blank"><i class="fas fa-file-alt"></i></a>
-                    </div>
-                    <p>Research Interests: Computer Science, Artificial Intelligence, Machine Learning, Natural Language Processing</p>
-                </div>
-                <div class="home-image">
-                    <img src="profile.jpg" alt="John Doe">
-                </div>
-            </div>
-            <div class="home-news">
-                <h3>News</h3>
-                <ul>
-                    <li>Presented paper at the 2022 Conference on Artificial Intelligence</li>
-                    <li>Received grant for research project on Natural Language Processing</li>
-                    <li>Co-authored book on Machine Learning published by MIT Press</li>
-                </ul>
-            </div>
-        </div>
+    <!-- Main Page -->
+    <section id="main">
+        <img src="images/profile.jpg" alt="Profile Picture">
+        <h1>Dhanesh Raj</h1>
+        <p>Short Bio...</p>
+        <!-- Add more details here -->
     </section>
 
-    <!-- Publications Section -->
-    <section id="publications" class="fade-section">
-        <div class="container">
-            <h2>Publications</h2>
-            <ul>
-                <li>Doe, J., Smith, A. (2022). "A Survey of Machine Learning Techniques for Image Recognition." Journal of Artificial Intelligence, 12(3), 45-62.</li>
-                <li>Johnson, M., Doe, J. (2021). "Natural Language Processing for Sentiment Analysis." Proceedings of the 2021 Conference on Natural Language Processing, 23-29.</li>
-                <li>Doe, J., Lee, C. (2020). "An Introduction to Deep Learning." MIT Press.</li>
-            </ul>
-        </div>
+    <!-- Interactive Timeline -->
+    <section id="timeline">
+        <!-- Timeline items here -->
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="parallax-section">
-        <div class="parallax-bg" style="background-image: url('projects.jpg');"></div>
-        <div class="container">
-            <h2>Projects</h2>
-            <!-- Project 1 -->
-            <div class="project">
-                <div class="project-image">
-                    <img src="project1.jpg" alt="Project 1">
-                </div>
-                <div class="project-info">
-                    <h3>Project 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
-                    <a href="#" class="project-button">Learn More</a>
-                </div>
-            </div>
-            <!-- Project 2 -->
-            <div class="project">
-                <div class="project-image">
-                    <img src="project2.jpg" alt="Project 2">
-                </div>
-                <div class="project-info">
-                    <h3>Project 2</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
-                    <a href="#" class="project-button">Learn More</a>
-                </div>
-            </div>
-            <!-- Project 3 -->
-            <div class="project">
-                <div class="project-image">
-                    <img src="project3.jpg" alt="Project 3">
-                </div>
-                <div class="project-info">
-                    <h3>Project 3</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
-                    <a href="#" class="project-button">Learn More</a>
-                </div>
-            </div>
-        </div>
+    <!-- Publications Carousel -->
+    <section id="publications">
+        <!-- Carousel items here -->
     </section>
 
-    <!-- Teaching Section -->
-    <section id="teaching" class="fade-section">
-        <div class="container">
-            <h2>Teaching</h2>
-            <ul>
-                <li>Introduction to Artificial Intelligence (Undergraduate)</li>
-                <li>Machine Learning (Graduate)</li>
-                <li>Natural Language Processing (Graduate)</li>
-            </ul>
-        </div>
-    </section>
+    <!-- And so on for other sections... -->
 
-    <!-- Activities Section -->
-    <section id="activities" class="parallax-section">
-        <div class="parallax-bg" style="background-image: url('activities.jpg');"></div>
-        <div class="container">
-            <h2>Activities</h2>
-            <ul>
-                <li>Member of the Association for Computing Machinery</li>
-                <li>Reviewer for the Journal of Artificial Intelligence</li>
-                <li>Volunteer at local high school robotics competition</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Group Dissemination Section -->
-    <section id="group-dissemination" class="fade-section">
-        <div class="container">
-            <h2>Group Dissemination</h2>
-            <ul>
-                <li>Smith, J., Doe, J. (2022). "A Framework for Evaluating Machine Learning Models." Proceedings of the 2022 Conference on Machine Learning, 16-22.</li>
-                <li>Doe, J., Lee, C. (2021). "Deep Learning for Image Recognition." Proceedings of the 2021 Conference on Artificial Intelligence, 12-18.</li>
-                <li>Johnson, M., Smith, J., Doe, J. (2020). "Sentiment Analysis using Natural Language Processing." Proceedings of the 2020 Conference on Natural Language Processing, 8-13.</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2023 John Doe. All Rights Reserved.</p>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Publications</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Teaching</a></li>
-                <li><a href="#">Activities</a></li>
-                <li><a href="#">Group Dissemination</a></li>
-            </ul>
-        </div>
-    </footer>
+    <script src="js/scripts.js"></script>
 </body>
-
 </html>
