--- a/index.html
+++ b/index.html
@@ -3,81 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Personal Website</title>
+    <title>Personal Resume</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="header-container">
-            <div class="logo">Logo</div>
-            <nav>
-                <ul>
-                    <li><a href="#resume">Resume</a></li>
-                    <li><a href="#email">Email</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#publications">Publications</a></li>
-                    <li><a href="#awards">Awards</a></li>
-                    <li><a href="#research">Research Interests</a></li>
-                    <li><a href="#teaching">Teaching</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#research-interests">Research Interests</a></li>
+                <li><a href="#teaching">Teaching</a></li>
+                <li><a href="#awards">Awards/Honor/Services</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <section id="intro">
-            <div class="intro-content">
-                <h1>Hello, I'm Ariadne Snyder</h1>
+        <section class="intro">
+            <div class="intro-left">
+                <img src="path/to/profile.img" alt="Profile Picture" class="profile-img">
+                <h1>Ariadne Snyder</h1>
+                <p>Communications</p>
+                <button>Email me</button>
+                <div class="social-icons">
+                    <a href="https://www.linkedin/dhanesh.raj"><img src="path/to/linkedin-icon.png" alt="LinkedIn"></a>
+                    <a href="https://www.facebook/dhanesh.raj"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
+                    <a href="https://www.instagram/dhanesh.raj"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
+                </div>
+                <div class="contact-info">
+                    <p>Address:<br>
+                       2nd Floor, Center for Wireless Networks and Applications<br>
+                       Amrita Vishwa Vidyapeetham<br>
+                       Amritapuri Campus</p>
+                    <p>Email:<br>
+                       <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a><br>
+                       <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
+                    <p>Phone Number:<br>
+                       +91 9846309356</p>
+                </div>
+            </div>
+            <div class="intro-right">
+                <h2>About Me (she/her)</h2>
                 <p>I am an energetic and passionate college student working towards a communications degree at Murrayfield School of Marketing. I aim to use my skills in writing, photography, and public relations in a summer internship at your organization.</p>
+                <div class="scholar-links">
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/google-scholar-icon.png" alt="Google Scholar"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/researchgate-icon.png" alt="ResearchGate"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/orcid-icon.png" alt="Orcid"></a>
+                </div>
+                <div class="resume-portfolio-buttons">
+                    <a href="path/to/resume.pdf" class="btn">Resume</a>
+                    <a href="#portfolio" class="btn">Portfolio</a>
+                </div>
             </div>
         </section>
+
         <section id="projects">
             <h2>Projects</h2>
-            <div class="project">
-                <h3>Project Title 1</h3>
-                <p>There is just enough space here for several lines of text. Make sure you get your message across clearly yet concisely.</p>
-            </div>
-            <div class="project">
-                <h3>Project Title 2</h3>
-                <p>There is just enough space here for several lines of text. Make sure you get your message across clearly yet concisely.</p>
-            </div>
-            <div class="project">
-                <h3>Project Title 3</h3>
-                <p>There is just enough space here for several lines of text. Make sure you get your message across clearly yet concisely.</p>
-            </div>
+            <!-- Add content for projects -->
         </section>
+
         <section id="publications">
             <h2>Publications</h2>
-            <div class="publication">
-                <h3>Paper Title 1</h3>
-                <p>Link 1</p>
-            </div>
-            <div class="publication">
-                <h3>Paper Title 2</h3>
-                <p>Link 2</p>
-            </div>
-            <div class="publication">
-                <h3>Paper Title 3</h3>
-                <p>Link 3</p>
-            </div>
+            <!-- Add content for publications -->
         </section>
-        <section id="research">
+
+        <section id="research-interests">
             <h2>Research Interests</h2>
-            <p>Your Sub-Header Goes Here</p>
-            <p>Your Sub-Header Goes Here</p>
-            <p>Your Sub-Header Goes Here</p>
+            <!-- Add content for research interests -->
         </section>
+
         <section id="teaching">
             <h2>Teaching</h2>
-            <p>Add details about your teaching experience here.</p>
+            <!-- Add content for teaching -->
+        </section>
+
+        <section id="awards">
+            <h2>Awards/Honor/Services</h2>
+            <!-- Add content for awards/honor/services -->
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Ariadne Snyder. All Rights Reserved.</p>
         <div class="social-media">
-            <a href="#">Facebook</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Instagram</a>
+            <a href="https://www.linkedin/dhanesh.raj"><img src="path/to/linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook/dhanesh.raj"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram/dhanesh.raj"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
+            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
 </body>
